--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,115 @@
+#top-header {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+}
+
+#top-search {
+    display: flex;
+    width: 100%;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+#top-search > .search-bar {
+    object-fit: cover;
+    width: 70%;
+    background-color: #f1f2f2;
+    margin-left: 20px;
+    height: 30px;
+}
+
+#top-search > .search-icon {
+    width: 20px;
+    height: 20px;
+}
+
+#top-profile {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 15px;
+}
+
+#top-profile > .notifications {
+    height: 20px;
+    width: 20px;
+}
+
+#top-profile > .profile-icon {
+    width: 20px;
+    height: 20px;
+}
+
+#bottom-header {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    padding: 10px;
+}
+
+#bottom-profile {
+    display: grid;
+    grid-template-columns: 20% 80%;
+    grid-template-rows: 25px 25px;
+}
+
+#bottom-profile > p {
+    margin: 0 auto;
+    width: 100%;
+}
+
+#bottom-profile > p.name {
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+#bottom-profile > .profile-icon {
+    display: flex;
+    grid-row-start: span 2;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+}
+
+#bottom-profile > .profile-icon > img {
+    width: 40px;
+}
+
+#bottom-header > #bottom-buttons {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100M;
+    gap: 15px;
+}
+
+button {
+    height: 40px;
+    width: 80px;
+    background: #125174;
+    color: white;
+    border: 0px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
 #content {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 15% 4fr;
+    grid-template-rows: 1fr 4fr;
     max-height: 100vh;
     width: 100%;
 }
 
 #sidebar {
-    background-color: #1992D4;
+    background-color: #125174;
     grid-row-start: span 2;
 }
 
 #main {
-    background-color: #E2E8F0;
+    background-color: #f1f2f2;
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -25,6 +122,7 @@
 
 #announcements {
     overflow-y: scroll;
+    max-height: 200px;
 }
 
 .nav-img {
